--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,11 @@
     "env": {
         "FLASK_ENV": "production",
         "FLASK_APP": "main.py"
+    },
+    "functions": {
+        "main.py": {
+            "memory": 1024,
+            "maxDuration": 60
+        }
     }
 } 
