Optimize for Vercel deployment with cloud storage

--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,8 @@
     ],
     "env": {
         "FLASK_ENV": "production",
-        "FLASK_APP": "main.py"
+        "FLASK_APP": "main.py",
+        "PYTHONUNBUFFERED": "1"
     },
     "functions": {
         "main.py": {
