--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ blinker==1.6.2
 sqlalchemy==2.0.37
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+google-cloud-storage==2.14.0 
